# MaixPy-K210-STM32

./: .gitignore  .gitmodules  .maixvision_run.py  .sysu_aiot_ide_run.py  CMakeLists.txt  README.md  project.py  pyproject.toml  requirements.txt  run_windows.bat  setup.py  启动MaixPy-K210-STM32.bat
app/: maix_runtime_app.c  maix_runtime_app.h
boards/: k210_generic.json  stm32f407_nucleo.json
cmake/: micropython.cmake  rtthread.cmake  sim_stm32f407.cmake  stm32f407.cmake  tflite_micro.cmake  toolchain-arm-none-eabi-sim.cmake  toolchain-arm-none-eabi.cmake  toolchain-kendryte-riscv64.cmake
components/drivers/k210/: CMakeLists.txt  k210_gpio.c  k210_hal.c  k210_hal.h  k210_i2c.c  k210_spi.c  k210_uart.c
components/drivers/stm32/: CMakeLists.txt  stm32_adc.c  stm32_dcmi.c  stm32_gpio_irq.c  stm32_hal.c  stm32_hal.h  stm32_i2c.c  stm32_lcd.c  stm32_pwm.c  stm32_spi.c  stm32_syscalls.c  stm32_uart.c
components/hal/: CMakeLists.txt  hal_adc.c  hal_adc.h  hal_audio.c  hal_audio.h  hal_camera.c  hal_camera.h  hal_common.c  hal_common.h  hal_display.c  hal_display.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_pwm.c  hal_pwm.h  hal_spi.c  hal_spi.h  hal_uart.c  hal_uart.h
components/micropython_rtthread/: Makefile  maix_mpy_port.c  maix_mpy_port.h  modmaix.c  modmaix_hal.c  mpconfigport.h  mphalport.h  qstrdefsport.h
configs/: k210_config.mk  stm32f407_config.mk
docs/: api_reference.md  architecture.md  board_schema.md  faq.md  hardware_porting.md  project_layout.md  quickstart.md
docs/api/: index.md
examples/basic/: gpio_demo.py  hello_maix.py
examples/vision/: image_classification.py
linker/: stm32f407_flash.ld
maix/: __init__.py  adc.py  audio_feature.py  camera.py  display.py  err.py  filter.py  i2c.py  nn.py  pinmap.py  version.py
maix/tools/: __init__.py  flash.py  monitor.py
reference/: README.md
reference/docs/: api_reference.md  architecture.md  hardware_porting.md  project_layout.md  quickstart.md
reference/examples/basic/: gpio_demo.py  hello_maix.py
reference/examples/vision/: image_classification.py
rtthread-nano-master/rt-thread/bsp/stm32f407-msh/Core/Inc/: main.h
rtthread-nano-master/rt-thread/bsp/stm32f407-msh/Core/Src/: main.c
rtthread-nano-master/rt-thread/bsp/stm32f407-msh/RT-Thread/: rtconfig.h
runtime/: maix_ai_backend.c  maix_ai_backend.h  maix_runtime_app.c  maix_runtime_app.h  maix_runtime_fs.c  maix_runtime_fs.h  maix_runtime_model.c  maix_runtime_model.h  maix_runtime_python.c  maix_runtime_python.h  maix_tflm_backend.cpp  maix_tflm_backend.h
runtime_bundle/: boot.py  main.py
runtime_bundle/maixapp/: auto_start.txt
runtime_bundle/maixapp/apps/sysu_aiotos_demo/: app.yaml  main.py
runtime_bundle/maixapp/apps/test_bundle/: app.yaml  main.py
runtime_bundle/models/: README.txt  labels.txt  model.manifest
sim/: CMakeLists.txt  board_qemu.c  main_qemu.c
startup/: startup_stm32f407xx.s
sysu/: __init__.py  audio.py  camera.py  filter.py  pwm.py  spi.py  uart.py
sysu/studio/: __init__.py  __main__.py  serial_bridge.py  server.py  task_runner.py
sysu/studio/static/: app.js  index.html  style.css
sysu/tools/: flash.py
tests/: conftest.py  test_adc.py  test_audio.py  test_audio_feature.py  test_audio_nn.py  test_display.py  test_err.py  test_filter.py  test_gpio.py  test_i2c.py  test_image.py  test_nn.py  test_pinmap.py  test_platform.py  test_project_cli.py  test_pwm.py  test_run.py  test_runtime_bundle.py  test_spi.py  test_studio.py  test_time.py  test_uart.py
tests/mock/: _maix_hal_mock.py
tools/: filter_viz.py  qemu_monitor.py  quick_test.py  run.py  runtime_bundle.py
tools/sysu_aiot_ide/: README.md  launch.py  server.py
tools/sysu_aiot_ide/static/: app.js  editor.js  index.html  style.css
workspace/: main.py
