[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maixpy-nano-rtthread"
dynamic = ["version"]
description = "跨平台边缘AI开发框架，支持K210和STM32"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pyserial>=3.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "websockets>=12.0",
]

[tool.setuptools.dynamic]
version = {attr = "sysu.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "examples.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
